--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@pankod/refine-cli": "^1.2.0",
-    "@pankod/refine-core": "^3.18.0",
-    "@pankod/refine-inferencer": "^1.2.0",
+    "@apidevtools/json-schema-ref-parser": "^10.1.0",
+    "@jsonforms/core": "^3.0.0",
+    "@jsonforms/material-renderers": "^3.0.0",
+    "@jsonforms/react": "^3.0.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
+    "@mui/x-date-pickers": "^5.0.13",
+    "@pankod/refine-cli": "^1.17.0",
+    "@pankod/refine-core": "^3.99.4",
+    "@pankod/refine-inferencer": "^2.8.2",
+    "@pankod/refine-mui": "^3.61.5",
+    "@pankod/refine-react-hook-form": "^3.37.2",
+    "@pankod/refine-react-router-v6": "^3.38.0",
+    "@pankod/refine-simple-rest": "^3.37.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -13,17 +24,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.0",
-    "web-vitals": "^1.1.1",
-    "@pankod/refine-simple-rest": "^3.18.0",
-    "@pankod/refine-mui": "^3.30.0",
-    "@pankod/refine-react-hook-form": "^3.27.1",
-    "@mui/icons-material": "^5.8.3",
-    "@pankod/refine-react-router-v6": "^3.18.0"
+    "web-vitals": "^1.1.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^12.20.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/node": "^12.20.10",
+    "tsup": "^6.6.3",
     "typescript": "^4.7.4"
   },
   "scripts": {
