--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,13 @@ jobs:
     steps:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.6.0
-      - name: Build project
+        
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Rebuild the build/ directory
         run: npm run build
+        
       - uses: seanmiddleditch/gha-publish-to-git@master
         with:
           branch: gh-pages
