--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,14 +7,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  publish_maven:
+  publish_project:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.6.0
         
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Rebuild the build/ directory
         run: npm run build
