--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-node@v3.6.0
         
       - name: Install dependencies
-        run: npm install
+        run: cd ../ && npm install
 
       - name: Rebuild the build/ directory
         run: npm run build
