--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm install
 
       - name: Rebuild the build/ directory
-        run: npm run build
+        run: CI=false && npm run build
         
       - uses: seanmiddleditch/gha-publish-to-git@master
         with:
